# babyos

./: .gitignore  Animation.py  BabyOS.py  GameObject.py  ImageCache.py  Makefile  Readme.md  build.sh  readme.md
src/: CMakeLists.txt  animation.cpp  animation.h  babyos.cpp  babyos.h  entity.h  image_scanner.cpp  image_scanner.h  main.cpp  picture.cpp  picture.h  random.h  texture_repository.cpp  texture_repository.h  util.h
